k8s-helm/_tests/aiservice.dev.yaml
NAME: aiservice
LAST DEPLOYED: Sun Jun 22 04:58:31 2025
NAMESPACE: dev
STATUS: pending-install
REVISION: 1
TEST SUITE: None
USER-SUPPLIED VALUES:
affinity:
  nodeAffinity:
    requiredDuringSchedulingIgnoredDuringExecution:
      nodeSelectorTerms:
      - matchExpressions:
        - key: kubernetes.io/os
          operator: In
          values:
          - linux
autoscaling:
  enabled: false
  maxReplicas: 1
  minReplicas: 1
  targetCPUUtilizationPercentage: 80
  targetMemoryUtilizationPercentage: 80
env:
- name: DEBUG_SERVER
  value: "False"
- name: DEBUG_SQLALCHEMY
  value: "False"
- name: LOGGING_LOG_LEVEL
  value: INFO
- name: POSTGRES_HOST
  valueFrom:
    secretKeyRef:
      key: posgresqlhost
      name: env-secret
- name: POSTGRES_PORT
  valueFrom:
    secretKeyRef:
      key: postgresqlport
      name: env-secret
- name: POSTGRES_USER
  valueFrom:
    secretKeyRef:
      key: postgresqluser
      name: env-secret
- name: POSTGRES_PASSWORD
  valueFrom:
    secretKeyRef:
      key: postgresqlpassword
      name: env-secret
- name: POSTGRES_DB
  value: aiservicedev
- name: LLM_DEFAULT_PROVIDER
  value: openai
- name: LLM_DEFAULT_MODEL
  value: gpt-4o-mini
- name: LLM_DEFAULT_API_KEY
  valueFrom:
    secretKeyRef:
      key: openaiapikey
      name: env-secret
- name: TOOL_TAVILY_API_KEY
  valueFrom:
    secretKeyRef:
      key: taviliapikey
      name: env-secret
- name: COMPOSIO_LOGGING_LEVEL
  value: debug
- name: COMPOSIO_API_KEY
  valueFrom:
    secretKeyRef:
      key: composioapikey
      name: env-secret
- name: COMPOSIO_REDIRECT_URL
  value: https://api-dev.action-agent.software/ai/api/v1/callback/extension
- name: FRONTEND_REDIRECT_URL
  value: https://dev.action-agent.software/callback/extension
- name: ELASTICSEARCH_URL
  valueFrom:
    secretKeyRef:
      key: elasticsearchurl
      name: env-secret
- name: REDIS_URL
  value: redis://redisdev:6379
- name: RABBITMQ_URL
  value: amqp://rabbitmqdev:5672
fullnameOverride: aiservicedev
image:
  pullPolicy: Always
  repository: myaagent.azurecr.io/aiservicedev
  tag: BuildID
imagePullSecrets:
- name: regcred
ingress:
  annotations: {}
  className: ""
  enabled: false
  hosts:
  - host: chart-example.local
    paths:
    - path: /
      pathType: ImplementationSpecific
  tls: []
nameOverride: aiservicedev
nodeSelector: {}
replicaCount: 1
resources:
  limits:
    cpu: "500"
    memory: 700Mi
  requests:
    cpu: 10m
    memory: 100Mi
revisionHistoryLimit: 0
service:
  port: 15200
  targetport: 15200
  type: ClusterIP
tolerations: []

COMPUTED VALUES:
affinity:
  nodeAffinity:
    requiredDuringSchedulingIgnoredDuringExecution:
      nodeSelectorTerms:
      - matchExpressions:
        - key: kubernetes.io/os
          operator: In
          values:
          - linux
autoscaling:
  enabled: false
  maxReplicas: 1
  minReplicas: 1
  targetCPUUtilizationPercentage: 80
  targetMemoryUtilizationPercentage: 80
env:
- name: DEBUG_SERVER
  value: "False"
- name: DEBUG_SQLALCHEMY
  value: "False"
- name: LOGGING_LOG_LEVEL
  value: INFO
- name: POSTGRES_HOST
  valueFrom:
    secretKeyRef:
      key: posgresqlhost
      name: env-secret
- name: POSTGRES_PORT
  valueFrom:
    secretKeyRef:
      key: postgresqlport
      name: env-secret
- name: POSTGRES_USER
  valueFrom:
    secretKeyRef:
      key: postgresqluser
      name: env-secret
- name: POSTGRES_PASSWORD
  valueFrom:
    secretKeyRef:
      key: postgresqlpassword
      name: env-secret
- name: POSTGRES_DB
  value: aiservicedev
- name: LLM_DEFAULT_PROVIDER
  value: openai
- name: LLM_DEFAULT_MODEL
  value: gpt-4o-mini
- name: LLM_DEFAULT_API_KEY
  valueFrom:
    secretKeyRef:
      key: openaiapikey
      name: env-secret
- name: TOOL_TAVILY_API_KEY
  valueFrom:
    secretKeyRef:
      key: taviliapikey
      name: env-secret
- name: COMPOSIO_LOGGING_LEVEL
  value: debug
- name: COMPOSIO_API_KEY
  valueFrom:
    secretKeyRef:
      key: composioapikey
      name: env-secret
- name: COMPOSIO_REDIRECT_URL
  value: https://api-dev.action-agent.software/ai/api/v1/callback/extension
- name: FRONTEND_REDIRECT_URL
  value: https://dev.action-agent.software/callback/extension
- name: ELASTICSEARCH_URL
  valueFrom:
    secretKeyRef:
      key: elasticsearchurl
      name: env-secret
- name: REDIS_URL
  value: redis://redisdev:6379
- name: RABBITMQ_URL
  value: amqp://rabbitmqdev:5672
fullnameOverride: aiservicedev
image:
  pullPolicy: Always
  repository: myaagent.azurecr.io/aiservicedev
  tag: BuildID
imagePullSecrets:
- name: regcred
ingress:
  annotations: {}
  className: ""
  enabled: false
  hosts:
  - host: chart-example.local
    paths:
    - path: /
      pathType: ImplementationSpecific
  tls: []
nameOverride: aiservicedev
nodeSelector: {}
replicaCount: 1
resources:
  limits:
    cpu: "500"
    memory: 700Mi
  requests:
    cpu: 10m
    memory: 100Mi
revisionHistoryLimit: 0
service:
  port: 15200
  targetport: 15200
  type: ClusterIP
tolerations: []

HOOKS:
MANIFEST:
---
# Source: aiservice/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aiservicedev
  labels:
    helm.sh/chart: aiservice-0.1.0
    app.kubernetes.io/name: aiservicedev
    app.kubernetes.io/instance: aiservice
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 15200
      targetPort: 15200
      protocol: TCP
  selector:
    app.kubernetes.io/name: aiservicedev
    app.kubernetes.io/instance: aiservice
---
# Source: aiservice/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aiservicedev
  labels:
    helm.sh/chart: aiservice-0.1.0
    app.kubernetes.io/name: aiservicedev
    app.kubernetes.io/instance: aiservice
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: aiservicedev
      app.kubernetes.io/instance: aiservice
  template:
    metadata:
      labels:
        app.kubernetes.io/name: aiservicedev
        app.kubernetes.io/instance: aiservice
    spec:
      imagePullSecrets:
        - name: regcred
      securityContext:
        null
      containers:
        - name: aiservice
          securityContext:
            null
          image: "myaagent.azurecr.io/aiservicedev:BuildID"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 15200
              protocol: TCP
          # livenessProbe:
          #   httpGet:
          #     path: /
          #     port: http
          # readinessProbe:
          #   httpGet:
          #     path: /
          #     port: http
          
          resources:
            limits:
              cpu: "500"
              memory: 700Mi
            requests:
              cpu: 10m
              memory: 100Mi
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/os
                operator: In
                values:
                - linux

NOTES:
1. Get the application URL by running these commands:
  export POD_NAME=$(kubectl get pods --namespace dev -l "app.kubernetes.io/name=aiservicedev,app.kubernetes.io/instance=aiservice" -o jsonpath="{.items[0].metadata.name}")
  export CONTAINER_PORT=$(kubectl get pod --namespace dev $POD_NAME -o jsonpath="{.spec.containers[0].ports[0].containerPort}")
  echo "Visit http://127.0.0.1:8080 to use your application"
  kubectl --namespace dev port-forward $POD_NAME 8080:$CONTAINER_PORT
